🐛 BUG FIX:zz-index chatbot on charts

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -79,7 +79,6 @@ body {
 .icon_arrow_container {
   width: fit-content;
   position: relative;
-  z-index: 1;
 
   .icon_arrow {
     display: flex;
