--- a/src/scss/Charts.scss
+++ b/src/scss/Charts.scss
@@ -1,5 +1,6 @@
 .charts {
   margin-top: 300px;
+  z-index: 10;
 
   .chart {
     width: 74vw;
